{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "c9cc43f6-c079-7084-9d0d-702dc8e8ed05",
  "resources": [
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:internet-gateway/igw-04e00fb71dd3831b9",
            "id": "igw-04e00fb71dd3831b9",
            "owner_id": "590183940398",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudopsdemo-igw"
            },
            "tags_all": {
              "Name": "cloudopsdemo-igw"
            },
            "vpc_id": "vpc-0ebbbbb4c9d3dc322"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_rt",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:route-table/rtb-085696426de6232b3",
            "id": "rtb-085696426de6232b3",
            "owner_id": "590183940398",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e00fb71dd3831b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudopsdemo-route-table"
            },
            "tags_all": {
              "Name": "cloudopsdemo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebbbbb4c9d3dc322"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_internet_gateway.project_igw",
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_rta",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03138e580176e9b65",
            "region": "us-east-1",
            "route_table_id": "rtb-085696426de6232b3",
            "subnet_id": "subnet-074d1a993edc9b0f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_internet_gateway.project_igw",
            "module.eks_infra.aws_route_table.project_rt",
            "module.eks_infra.aws_subnet.project_subnets",
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad3d3f470e681c9f",
            "region": "us-east-1",
            "route_table_id": "rtb-085696426de6232b3",
            "subnet_id": "subnet-00c3cf29f61f17ae2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_internet_gateway.project_igw",
            "module.eks_infra.aws_route_table.project_rt",
            "module.eks_infra.aws_subnet.project_subnets",
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:security-group/sg-07fb45c83828b69b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fb45c83828b69b8",
            "ingress": [],
            "name": "terraform-20250711065822196600000001",
            "name_prefix": "terraform-",
            "owner_id": "590183940398",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "var.cluster_name-sg"
            },
            "tags_all": {
              "Name": "var.cluster_name-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebbbbb4c9d3dc322"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:security-group/sg-0f18647a0d14ae67f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f18647a0d14ae67f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250711065822199300000002",
            "name_prefix": "terraform-",
            "owner_id": "590183940398",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudopsdemo-eks-node-sg"
            },
            "tags_all": {
              "Name": "cloudopsdemo-eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebbbbb4c9d3dc322"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnets",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:subnet/subnet-074d1a993edc9b0f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074d1a993edc9b0f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183940398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudopsdemo-subnet-0"
            },
            "tags_all": {
              "Name": "cloudopsdemo-subnet-0"
            },
            "vpc_id": "vpc-0ebbbbb4c9d3dc322"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:subnet/subnet-00c3cf29f61f17ae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c3cf29f61f17ae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183940398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudopsdemo-subnet-1"
            },
            "tags_all": {
              "Name": "cloudopsdemo-subnet-1"
            },
            "vpc_id": "vpc-0ebbbbb4c9d3dc322"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_infra.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "module.eks_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183940398:vpc/vpc-0ebbbbb4c9d3dc322",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0506444a9783de7d6",
            "default_route_table_id": "rtb-0ca69aa7dbbb8cabe",
            "default_security_group_id": "sg-0374cdf6a811676e8",
            "dhcp_options_id": "dopt-0b17728b551cb2adb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebbbbb4c9d3dc322",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca69aa7dbbb8cabe",
            "owner_id": "590183940398",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudopsdemo-vpc"
            },
            "tags_all": {
              "Name": "cloudopsdemo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}